--- a/UnitTesting/LineSensors/LineSensors.vcxproj.filters
+++ b/UnitTesting/LineSensors/LineSensors.vcxproj.filters
@@ -21,9 +21,33 @@
     <ClInclude Include="PurePursuitGeometry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="polyfit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Polynomial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PolynomialRootFinder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="polyfit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Polynomial.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PolynomialRootFinder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PolynomialTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cubic.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
