--- a/UnitTesting/CheckPointMap/CheckPointMap.vcxproj.filters
+++ b/UnitTesting/CheckPointMap/CheckPointMap.vcxproj.filters
@@ -20,6 +20,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Path.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Map.h">
       <Filter>Header Files</Filter>
     </ClInclude>
