--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = pololu/QTRSensors@^4.0.0
+lib_deps = 
+	pololu/QTRSensors@^4.0.0
+	bblanchon/ArduinoJson@^7.0.4
