--- a/platformio.ini
+++ b/platformio.ini
@@ -7,11 +7,27 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+default_envs = uno
 
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
+build_flags = 
+	-D SERIAL1_RX_BUFFER_SIZE=256
 lib_deps = 
 	pololu/QTRSensors@^4.0.0
 	bblanchon/ArduinoJson@^7.0.4
+	mike-matera/ArduinoSTL@^1.3.3
+
+[env:leonardo]
+platform = atmelavr
+board = leonardo
+framework = arduino
+build_flags = 
+	-D SERIAL1_RX_BUFFER_SIZE=256
+lib_deps = 
+	pololu/QTRSensors@^4.0.0
+	bblanchon/ArduinoJson@^7.0.4
+	mike-matera/ArduinoSTL@^1.3.3
