--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,8 @@ platform = atmelavr
 board = uno
 framework = arduino
 build_flags = 
-	-D SERIAL1_RX_BUFFER_SIZE=256
+	-D SERIAL1_RX_BUFFER_SIZE=64
+	-D _SS_MAX_RX_BUFF=64
 lib_deps = 
 	pololu/QTRSensors@^4.0.0
 	bblanchon/ArduinoJson@^7.0.4
@@ -24,6 +25,18 @@ lib_deps =
 [env:leonardo]
 platform = atmelavr
 board = leonardo
+framework = arduino
+build_flags = 
+	-D SERIAL1_RX_BUFFER_SIZE=256
+lib_deps = 
+	pololu/QTRSensors@^4.0.0
+	bblanchon/ArduinoJson@^7.0.4
+	mike-matera/ArduinoSTL@^1.3.3
+
+
+[env:lplm4f120h5qr]
+platform = titiva
+board = lx4f120h
 framework = arduino
 build_flags = 
 	-D SERIAL1_RX_BUFFER_SIZE=256
